ajout de 2 méthodes pour calculer les threads en java